--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Track user journey and clicks",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node ./bin/www",
+    "test": "mocha --exit"
   },
   "author": "suryakant@invitratech.com",
   "license": "ISC",
@@ -21,6 +22,8 @@
     "koa-static": "^5.0.0",
     "morgan": "^1.9.1",
     "mssql": "^5.0.5",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   }
 }
