--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ node_js:
 cache:
   directories:
     - "node_modules"
+after_success:
+  - eval "$(ssh-agent -s)"
+  - chmod 600 .travis/deploy_key.pem
+  - ssh-add .travis/deploy_key.pem
+  - git remote add deploy git@github.com:suryakant-patil/tracking.git
+  - git push deploy
